@@ -1,4 +1,8 @@
-2009-07-03 10:00 Mike Massonnet
+2009-07-03 19:30 Mike Massonnet mmassonnet@xfce.org
+	* data/interfaces/Makefile.am use a sort of filter for interfaces_h 
+	* data/interfaces/xfpm-settings.ui drops a forgotten #define.
+	
+2009-07-03 10:00 Mike Massonnet mmassonnet@xfce.org
 	* Patch to avoid installing the ui file.
 
 2009-06-30: 15:00 Ali aliov@xfce.org
